--- a/Programmr/.classpath
+++ b/Programmr/.classpath
@@ -6,6 +6,7 @@
 	<classpathentry kind="src" path="Strings"/>
 	<classpathentry kind="src" path="Arrays"/>
 	<classpathentry kind="src" path="Methods"/>
+	<classpathentry kind="src" path="Collections"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
