--- a/Programmr/.classpath
+++ b/Programmr/.classpath
@@ -8,6 +8,7 @@
 	<classpathentry kind="src" path="Methods"/>
 	<classpathentry kind="src" path="Collections"/>
 	<classpathentry kind="src" path="Loops"/>
+	<classpathentry kind="src" path="FlowControl"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
